# Todolist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build_and_push.yaml
bot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  schemas.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
goals/views/: boards.py  categories.py  comments.py  goals.py
tests/: conftest.py  factories.py  fixtures.py  test_board.py  test_categories.py  test_comments.py  test_goals.py
todolist/: fields.py  settings.py  urls.py
