[tool.poetry]
name = "dip1-1"
version = "0.1.0"
description = ""
authors = ["sacred70 <sacred70@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
